# trading-bot

./: .app.py.swp  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  README.md.bak.20260508_114539  __probe_from_gitbash.txt  adaptive_confirmation_report.py  adaptive_impact_report.py  add_symbol_event.py  ai_dependency_status.py  alerts.py  analytics_report.py  app.py  app.py.bak.symbols_config  app.py.bak_log_rejection_fix  app.py.bak_log_trade_fix  apply_event_scores.py  archive_context_state.py  attribution_report.py  auto_buy_manager.py  auto_buy_outcome_report.py  backfill_missing_fills.py  backfill_setup_labels.py  baseline_open_positions.py  batch_import_events.py  blocked_signal_outcome_report.py  bot_events.py  broker.py  build_historical_trend_context.py  build_market_context.py  buy_opportunity_report.py  collect_and_score_events.py  config.py  context_trade_join_report.py  (+138 more)
.claude-flow/: CAPABILITIES.md  config.yaml
.codex/: config.toml
analytics_ext/: attribution.py  replay_engine.py
api/: __init__.py  debug_routes.py  register_routes.py  request_services.py  status_routes.py  webhook_routes.py
config/: __init__.py  _env.py  auto_buy.py  auto_sell.py  conviction.py  ml.py  position_manager.py  positions.py  risk.py  signal.py
dashboards/: __init__.py  friction_heatmap_dashboard.py
data_layer/: ledger.py
execution/: order_policy.py
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  GRAPH_TREE.html  manifest.json
legacy_architecture/: README.md
logs/: audit_write_integrity.jsonl
market_intelligence/: adjacency_impact.py  alpaca_tape.py  cot_positioning.py  dealer_gamma.py  experience_model.py  intelligence_store.py  intraday_state.py  market_brief_builder.py  market_brief_schema.py  market_state.py  news_event_model.py  prime_brokerage_flows.py  raw_research_template.py  research_output.py  source_reliability.py  tape_reader.py  webull_market_evidence.py  webull_morning_brief.py
migration/: README.md  setup_wsl_on_d.ps1  son_backup.cron  vm_capture.sh  wsl_restore.sh
ml/: README.md
ml_platform/: README.md  __init__.py  brain_features.py  cli.py  config.py  dataset_builder.py  datasets.py  evaluation.py  experiments.py  feature_parity_contract.py  governance.py  integration_contract.py  lifecycle.py  pit_context.py  promotion.py  readiness.py  registry.py  replay.py  retention.py  serving.py  staged.py  validation.py
ops/: README.md  account_state_decomposition_plan.md  ai_leverage_audit.md  authority_matrix.json  auto_buy_strategy_status.md  clean_local_artifacts.sh  compatibility_deletion_plan.md  congressional_disclosure_context.md  context_symbol_universe.md  cot_positioning_context.md  crontab.tradingbot.current.txt  database_backup_service.py  db_connection_audit.py  dealer_gamma_context.md  deployment_reference_audit.py  export_for_vault.sh  external_observability_runbook.md  feature_flags.yml  fetch_to_vault.ps1  incident_escalation.yml  incident_template.md  intelligence_flow.md  live-bar-stream.service  ml_platform_roadmap.md  module_inventory.md  module_ownership.md  premarket_runbook.md  prime_brokerage_flow_context.md  project_audit_2026-05-26.md  project_audit_followup_2026-06-08.md  refactor_safety_checklist.md  rollout_contract.md  runtime_json_inventory.md  secrets_manager_runbook.md  trading_education_sources.md  tuesday_debrief_template.md  tuesday_qa_runbook.md  tuesday_qa_runner.py
pipeline/: __init__.py  after_close_learning.py  cold_learning_archive.py  counterfactual_concept_drift.py  counterfactual_veto_relaxation.py  database_backup.py  db_right_size_maintenance.py  external_symbol_candidate_refresh.py  historical_bar_archive.py  historical_bar_backfill.py  historical_bar_completion_hook.py  historical_bar_feature_repair.py  historical_bar_retry_missing.py  historical_outcome_feedback.py  intraday_learning.py  learning_backfill_repair.py  model_evidence_payload_export.py  model_evidence_review.py  off_hours_historical_bar_learning.py  polygon_tick_archive.py  post_session_review.py  pre_market.py  retrain.py  shadow_predictions.py  sqlite_vacuum_swap.py  symbol_universe_retrain.py  trading_education_ingest.py  train_historical_bar_model.py  validate_predictions.py
reports/: __init__.py  command.py  registry.py
repositories/: __init__.py  analytics_ext_repo.py  analytics_report_repo.py  auto_buy_repo.py  bar_pattern_feature_repo.py  blocked_signal_outcome_repo.py  bot_events_repo.py  candidate_universe_repo.py  concept_drift_repo.py  context_repo.py  context_trade_join_repo.py  cooldown_repo.py  counterfactual_training_repo.py  decision_snapshot_repo.py  discovery_execution_bridge_repo.py  entry_quality_repo.py  excursion_repo.py  exit_snapshot_repo.py  experience_model_repo.py  external_symbol_discovery_repo.py  fill_repo.py  historical_bar_coverage_repo.py  historical_bar_quality_repo.py  historical_bar_training_repo.py  intelligence_learning_report_repo.py  job_runs_repo.py  label_features_repo.py  label_v1_repo.py  ledger_repo.py  lifecycle_analysis_repo.py  live_features_repo.py  market_intelligence_repo.py  missed_opportunity_repo.py  ml_export_repo.py  ml_validation_repo.py  ops_check_conviction_queries.py  ops_check_intelligence_queries.py  ops_check_rejection_queries.py  ops_check_repo.py  paper_replay_probe_repo.py  (+27 more)
risk/: account_risk.py  exposure.py  live_guards.py  macro_policy.py
scripts/: README.md  adaptive_confirmation_report.py  adaptive_impact_report.py  adversarial_simulation.py  alerts.py  alpaca_py_broker_adapter.py  analytics_report.py  analyze_ml_edge.py  apply_event_scores.py  archive_context_state.py  auto_buy_counterfactual_score_report.py  auto_buy_manager.py  auto_buy_outcome_report.py  backfill_candidate_ml_outcomes.py  backfill_missing_fills.py  backfill_setup_labels.py  bar_pattern_archive.py  bar_timing_quality_report.py  benchmark_report.py  blocked_signal_outcome_report.py  bot_events.py  broker.py  build_historical_trend_context.py  buy_opportunity_report.py  daily_summary.py  (+118 more)
(+1027 files in other folders)
