[project]
name = "trading-bot"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "pip-audit==2.9.0",
    "pre-commit==4.4.0",
    "pytest==8.4.2",
    "ruff==0.15.15",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — enforced by line-length for new code; legacy lines excluded
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # redefined-while-unused (common in test fixtures/parametrize)

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
