[project]
name = "trading-bot"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
research = [
    "duckdb==1.5.3",
    "hmmlearn==0.3.3",
    "joblib==1.5.3",
    "pyarrow==24.0.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "threadpoolctl==3.6.0",
    "torch==2.12.0",
    "xgboost==3.2.0",
]
dashboard = [
    "streamlit>=1.40,<2",
]
timescale = [
    "asyncpg>=0.29,<1",
]
sentiment = [
    "transformers>=4.40,<5",
]
dev = [
    "mypy==1.18.2",
    "pip-audit==2.9.0",
    "pre-commit==4.4.0",
    "pytest==8.4.2",
    "ruff==0.15.15",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — enforced by line-length for new code; legacy lines excluded
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # redefined-while-unused (common in test fixtures/parametrize)

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
