[project]
name = "trading-bot"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
runtime = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "alpaca-py==0.43.4",
    "alpaca-trade-api==3.2.0",
    "annotated-types==0.7.0",
    "anthropic==0.101.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "curl_cffi==0.15.0",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "docstring_parser==0.18.0",
    "Flask==3.1.3",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "gunicorn==26.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.14",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "jiter==0.14.0",
    "MarkupSafe==3.0.3",
    "msgpack==1.0.3",
    "multidict==6.7.1",
    "multitasking==0.0.13",
    "numpy==2.4.4",
    "packaging==26.2",
    "pandas==2.3.3",
    "peewee==4.0.6",
    "platformdirs==4.10.0",
    "propcache==0.5.2",
    "protobuf==7.35.0",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "PyYAML==6.0.1",
    "requests==2.34.0",
    "setuptools==81.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.4",
    "sseclient-py==1.9.0",
    "typing_extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==1.26.20",
    "websocket-client==1.9.0",
    "websockets==10.4",
    "Werkzeug==3.1.8",
    "wheel==0.47.0",
    "yarl==1.23.0",
    "yfinance==0.2.58",
]
research = [
    "duckdb==1.5.3",
    "hmmlearn==0.3.3",
    "joblib==1.5.3",
    "pyarrow==24.0.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "threadpoolctl==3.6.0",
    "torch==2.12.0",
    "xgboost==3.2.0",
]
dashboard = [
    "streamlit>=1.40,<2",
]
timescale = [
    "asyncpg>=0.29,<1",
]
sentiment = [
    "transformers>=4.40,<5",
]
webull = [
    "webull-openapi-python-sdk==2.0.10",
]
dev = [
    "mypy==1.18.2",
    "pip-audit==2.9.0",
    "pre-commit==4.4.0",
    "pytest==8.4.2",
    "pytest-xdist==3.8.0",
    "ruff==0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts", "src"]
addopts = "-q --strict-markers --durations=20"
markers = [
    "slow: long-running or integration-style tests",
    "runtime: runtime safety tests",
    "research: optional research dependency tests",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — enforced by line-length for new code; legacy lines excluded
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # redefined-while-unused (common in test fixtures/parametrize)
"app.py" = ["E402"]  # compatibility path setup precedes legacy imports during migration
"ops_check.py" = ["E402"]  # compatibility path setup precedes legacy imports during migration
"src/trading_bot/ops_checks/cli.py" = ["E402"]  # compatibility path setup precedes legacy imports
"src/trading_bot/ops_checks/legacy_cli.py" = ["E402", "F821"]  # dynamic lazy handlers are bound from string refs
"src/trading_bot/web/runtime_compat.py" = ["E402"]  # compatibility path setup precedes legacy imports
"src/trading_bot/positions/manager.py" = ["E402"]  # moved legacy script keeps path setup before imports
"src/trading_bot/signals/auto_buy/manager.py" = ["E402"]  # moved legacy script loads env/path context before imports
"src/trading_bot/services/*.py" = ["E402", "F821", "F841"]  # packaged legacy services include runtime-bound globals during migration
"src/trading_bot/services/**/*.py" = ["E402", "F821", "F841"]  # packaged legacy service subpackages during migration
"repositories/__init__.py" = ["E402"]  # namespace shim adjusts scripts path before aliasing
"services/__init__.py" = ["E402"]  # namespace shim adjusts scripts path before aliasing
"scripts/*.py" = ["E402"]  # legacy scripts load env/path context before some imports
"tests/*.py" = ["E402"]  # tests expose raw repo/script paths before imports for uninstalled execution

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
